--- a/my_su_re/pubspec.yaml
+++ b/my_su_re/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.8.1
+  sdk: '>=3.4.3 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -33,15 +33,21 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  firebase_core: ^3.15.1
-  firebase_auth: ^5.3.4
-  firebase_storage: ^12.0.4
-  cloud_firestore: ^5.6.11
+  cupertino_icons: ^1.0.6
+  firebase_core: ^3.1.0
+  firebase_auth: ^5.1.0
+  firebase_storage: ^12.0.1
+  cloud_firestore: ^5.0.1
   image_picker: ^1.0.7
   provider: ^6.1.2
   flutter_spinkit: ^5.2.0
   cached_network_image: ^3.3.1
+  flutter_svg: ^2.0.7
+  animated_text_kit: ^4.2.2
+  intl: ^0.19.0
+  flutter_staggered_grid_view: ^0.7.0
+  get_it: ^8.0.3
+get_it: ^7.7.0
 
 
 dev_dependencies:
@@ -53,7 +59,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -65,6 +71,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
